// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extract all messages 1`] = `
Array [
  Object {
    "defaultMessage": "Privacy",
    "description": "privacy",
    "id": "footer.privacy",
  },
  Object {
    "defaultMessage": "Terms",
    "description": "terms",
    "id": "footer.terms",
  },
  Object {
    "defaultMessage": "Settings",
    "description": "settings",
    "id": "footer.settings",
  },
  Object {
    "defaultMessage": "Hello {name}",
    "description": "hello",
    "id": "header.hello",
  },
  Object {
    "defaultMessage": "<a href=\\"#\\">You can change your cookie settings here</a>",
    "description": "cookie",
    "id": "footer.cookie",
  },
  Object {
    "defaultMessage": "external",
    "description": "external",
    "id": "external.external",
  },
]
`;

exports[`Extract all messages with options 1`] = `
Array [
  Object {
    "defaultMessage": "Privacy",
    "description": "privacy",
    "id": "footer.privacy",
  },
  Object {
    "defaultMessage": "Terms",
    "description": "terms",
    "id": "footer.terms",
  },
  Object {
    "defaultMessage": "Settings",
    "description": "settings",
    "id": "footer.settings",
  },
  Object {
    "defaultMessage": "Hello {name}",
    "description": "hello",
    "id": "header.hello",
  },
  Object {
    "defaultMessage": "<a href=\\"#\\">You can change your cookie settings here</a>",
    "description": "cookie",
    "id": "footer.cookie",
  },
  Object {
    "defaultMessage": "foo",
    "description": "foo",
    "id": "foo",
  },
  Object {
    "defaultMessage": "bar",
    "description": "bar",
    "id": "bar",
  },
  Object {
    "defaultMessage": "external",
    "description": "external",
    "id": "external.external",
  },
]
`;

exports[`Test binary 1`] = `
Array [
  Object {
    "defaultMessage": "Privacy",
    "description": "privacy",
    "id": "footer.privacy",
  },
  Object {
    "defaultMessage": "Terms",
    "description": "terms",
    "id": "footer.terms",
  },
  Object {
    "defaultMessage": "Settings",
    "description": "settings",
    "id": "footer.settings",
  },
  Object {
    "defaultMessage": "Hello {name}",
    "description": "hello",
    "id": "header.hello",
  },
  Object {
    "defaultMessage": "<a href=\\"#\\">You can change your cookie settings here</a>",
    "description": "cookie",
    "id": "footer.cookie",
  },
  Object {
    "defaultMessage": "foo",
    "description": "foo",
    "id": "foo",
  },
  Object {
    "defaultMessage": "bar",
    "description": "bar",
    "id": "bar",
  },
  Object {
    "defaultMessage": "external",
    "description": "external",
    "id": "external.external",
  },
]
`;
